# fast-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: __init__.py  db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
